library/src/libqspinbox.h

typedef struct QDoubleSpinBox QDoubleSpinBox;
typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QSpinBox QSpinBox;
typedef struct QWidget QWidget;
QSpinBox* QSpinBox_new(QWidget* parent);
QSpinBox* QSpinBox_new2();
QMetaObject* QSpinBox_MetaObject(const QSpinBox* self);
void* QSpinBox_Metacast(QSpinBox* self, const char* param1);
int QSpinBox_Metacall(QSpinBox* self, int param1, int param2, void** param3);
libqt_string QSpinBox_Tr(const char* s);
int QSpinBox_Value(const QSpinBox* self);
libqt_string QSpinBox_Prefix(const QSpinBox* self);
void QSpinBox_SetPrefix(QSpinBox* self, libqt_string prefix);
libqt_string QSpinBox_Suffix(const QSpinBox* self);
void QSpinBox_SetSuffix(QSpinBox* self, libqt_string suffix);
libqt_string QSpinBox_CleanText(const QSpinBox* self);
int QSpinBox_SingleStep(const QSpinBox* self);
void QSpinBox_SetSingleStep(QSpinBox* self, int val);
int QSpinBox_Minimum(const QSpinBox* self);
void QSpinBox_SetMinimum(QSpinBox* self, int min);
int QSpinBox_Maximum(const QSpinBox* self);
void QSpinBox_SetMaximum(QSpinBox* self, int max);
void QSpinBox_SetRange(QSpinBox* self, int min, int max);
int QSpinBox_StepType(const QSpinBox* self);
void QSpinBox_SetStepType(QSpinBox* self, int stepType);
int QSpinBox_DisplayIntegerBase(const QSpinBox* self);
void QSpinBox_SetDisplayIntegerBase(QSpinBox* self, int base);
bool QSpinBox_Event(QSpinBox* self, QEvent* event);
int QSpinBox_Validate(const QSpinBox* self, libqt_string input, int* pos);
int QSpinBox_ValueFromText(const QSpinBox* self, libqt_string text);
libqt_string QSpinBox_TextFromValue(const QSpinBox* self, int val);
void QSpinBox_Fixup(const QSpinBox* self, libqt_string str);
void QSpinBox_SetValue(QSpinBox* self, int val);
void QSpinBox_ValueChanged(QSpinBox* self, int param1);
void QSpinBox_TextChanged(QSpinBox* self, libqt_string param1);
libqt_string QSpinBox_Tr2(const char* s, const char* c);
libqt_string QSpinBox_Tr3(const char* s, const char* c, int n);
QDoubleSpinBox* QDoubleSpinBox_new(QWidget* parent);
QDoubleSpinBox* QDoubleSpinBox_new2();
QMetaObject* QDoubleSpinBox_MetaObject(const QDoubleSpinBox* self);
void* QDoubleSpinBox_Metacast(QDoubleSpinBox* self, const char* param1);
int QDoubleSpinBox_Metacall(QDoubleSpinBox* self, int param1, int param2, void** param3);
libqt_string QDoubleSpinBox_Tr(const char* s);
double QDoubleSpinBox_Value(const QDoubleSpinBox* self);
libqt_string QDoubleSpinBox_Prefix(const QDoubleSpinBox* self);
void QDoubleSpinBox_SetPrefix(QDoubleSpinBox* self, libqt_string prefix);
libqt_string QDoubleSpinBox_Suffix(const QDoubleSpinBox* self);
void QDoubleSpinBox_SetSuffix(QDoubleSpinBox* self, libqt_string suffix);
libqt_string QDoubleSpinBox_CleanText(const QDoubleSpinBox* self);
double QDoubleSpinBox_SingleStep(const QDoubleSpinBox* self);
void QDoubleSpinBox_SetSingleStep(QDoubleSpinBox* self, double val);
double QDoubleSpinBox_Minimum(const QDoubleSpinBox* self);
void QDoubleSpinBox_SetMinimum(QDoubleSpinBox* self, double min);
double QDoubleSpinBox_Maximum(const QDoubleSpinBox* self);
void QDoubleSpinBox_SetMaximum(QDoubleSpinBox* self, double max);
void QDoubleSpinBox_SetRange(QDoubleSpinBox* self, double min, double max);
int QDoubleSpinBox_StepType(const QDoubleSpinBox* self);
void QDoubleSpinBox_SetStepType(QDoubleSpinBox* self, int stepType);
int QDoubleSpinBox_Decimals(const QDoubleSpinBox* self);
void QDoubleSpinBox_SetDecimals(QDoubleSpinBox* self, int prec);
int QDoubleSpinBox_Validate(const QDoubleSpinBox* self, libqt_string input, int* pos);
double QDoubleSpinBox_ValueFromText(const QDoubleSpinBox* self, libqt_string text);
libqt_string QDoubleSpinBox_TextFromValue(const QDoubleSpinBox* self, double val);
void QDoubleSpinBox_Fixup(const QDoubleSpinBox* self, libqt_string str);
void QDoubleSpinBox_SetValue(QDoubleSpinBox* self, double val);
void QDoubleSpinBox_ValueChanged(QDoubleSpinBox* self, double param1);
void QDoubleSpinBox_TextChanged(QDoubleSpinBox* self, libqt_string param1);
libqt_string QDoubleSpinBox_Tr2(const char* s, const char* c);
libqt_string QDoubleSpinBox_Tr3(const char* s, const char* c, int n);